# QTuxTimings

./: .gitignore  PKGBUILD  README.md  aod-voltages-kmod.spec  install.sh  qtuxtimings-dkms.install  qtuxtimings.spec  ryzen_smu-kmod.spec  tuxbench-kmod.spec  update.sh
.copr/: Makefile
Linux/: .gitignore  CMakeLists.txt  Makefile
Linux/docs/: PM_TABLE_INDICES.md
Linux/src/: backend.c  backend.h  bench.h  dram.c  main.c  main.cpp  pi_bench.h  pm_table.c  pm_table.h  types.h  ui.c  ui.cpp  ui.h
Linux/src/aod-voltages/: aod_voltages.c  dkms.conf
Linux/src/tuxbench/: dkms.conf  tuxbench.c
